<resources>
    <string name="app_name">AndroidTask1</string>
    <string name="hello">Hello</string>
    <string name="andersen">Andersen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_something">Введите что-нибудь:</string>
    <string name="go_to_fragment">go to fragment</string>
    <string name="go_to_recyclerview">Go to RecyclerView Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="recycler_view_menu">Recycler View</string>
    <string name="fragment_menu">Fragment</string>
    <string name="task_1">Задание 1</string>
    <string name="task_2">Задание 2</string>
    <string name="task_3">Задание 3</string>
    <string name="task_4">Задание 4</string>
    <string name="something">Something</string>
    <string name="text_watcher">Text Watcher</string>
    <string name="hello_task_2_fragment">Hello task 2 fragment</string>
    <string name="hello_task_3_fragment">Hello task 3 fragment</string>
    <string name="hello_task_4_fragment">Hello task 4 fragment</string>
    <string name="name">name</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="song_title">Souk eye</string>
    <string name="artist_title">Gorillaz</string>
    <string name="genre_title">Alternative</string>
    <string name="choose_artist">Выбрать исполнителя</string>


    <string-array name="figures_array">
        <item>Квадрат</item>
        <item>Треугольник</item>
        <item>Параллелепипед</item>
        <item>Тетраэдр</item>
        <item>Круг</item>
        <item>Трапеция</item>
        <item>Куб</item>
        <item>Овал</item>
        <item>Ромб</item>
        <item>Окружность</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="startMusicActivity">Открыть плеер</string>
    <string name="open_app">Open App</string>
    <string name="txt_title">Title</string>
    <string name="txt_author">Author</string>
    <string name="txt_publishedAt">Published at</string>
    <string name="news_title">Title</string>
    <string name="news_description">Description</string>
    <string name="source_name">Source name</string>
    <string name="picasso_pic">Picasso pic:</string>
    <string name="glide_pic">Glide pic:</string>
    <string name="click_the_circle">click the circle</string>
    <string name="background_location_permission_title">Background location</string>
    <string name="background_location_permission_message">Do you allow to use your location in background?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string-array name="Genres">
        <item>score</item>
        <item>pop</item>
        <item>electronic</item>
        <item>rap</item>
        <item>grunge</item>
        <item>alternative</item>
        <item>art_rock</item>
    </string-array>

    <string-array name="Artists">
        <item>mick_gordon</item>
        <item>lady_gaga</item>
        <item>daft_punk</item>
        <item>kid_cudi</item>
        <item>john_paesano</item>
        <item>the_shaggs</item>
        <item>red_hot_chili_peppers</item>
        <item>gorillaz</item>
        <item>arctic_monkeys</item>
        <item>toby_fox</item>
    </string-array>

    <string-array name="NewsThemes">
        <item>software</item>
        <item>entertainment</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
    </string-array>
</resources>