<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".task3.NewsFragment"
    android:id="@+id/news_main_container">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/glide"
            android:text="@string/glide_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center">
        </TextView>

        <ImageView
            android:id="@+id/image_full_news_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:id="@+id/picasso"
            android:text="@string/picasso_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center">
        </TextView>

        <ImageView
            android:id="@+id/image_full_news_picasso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ImageView>

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/news_title">
        </TextView>

        <TextView
            android:id="@+id/news_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:breakStrategy="simple"
            android:text="@string/news_description"
            android:gravity="center"        >
        </TextView>

        <TextView
            android:id="@+id/source_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/source_name">
        </TextView>

    </LinearLayout>
</ScrollView>
</LinearLayout>
