<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task1.BlankFragment"
    android:id="@+id/fragment_container_view_tag">

    <EditText
        android:id="@+id/input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:hint="@string/enter_something" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginTop="@dimen/helloAndersen_top_indent"
            android:textAlignment="center"
            android:text="@string/hello"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/andersen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/andersen"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal"
            />

    </LinearLayout>
</FrameLayout>