<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/player_background"
    tools:context=".task2.view.MusicActivity">

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/logo_indent"
        android:src="@drawable/andersen"
        app:layout_constraintBottom_toTopOf="@id/song_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/buttons_bottom_indent"
        android:background="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_pause_24"
        android:layout_marginBottom="@dimen/buttons_bottom_indent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/play"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_stop_24"
        android:layout_marginBottom="@dimen/buttons_bottom_indent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/play" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/choose_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_artist"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/album_cover"
        app:layout_constraintStart_toStartOf="@+id/album_cover"
        app:layout_constraintTop_toBottomOf="@id/artist_title" />

    <TextView
        android:id="@+id/artist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/songArtist_indent"
        android:text="@string/artist_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/album_cover"
        app:layout_constraintStart_toStartOf="@+id/album_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genre_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/album_cover"
        app:layout_constraintStart_toStartOf="@+id/album_cover"
        app:layout_constraintTop_toBottomOf="@+id/song_title" />

</androidx.constraintlayout.widget.ConstraintLayout>